Read graphql schema files directly and pass schema string to parser (problem with graphql not finding the files in resources directly... ??). Remove dozer dependency. Fix RoleDirective. Remove Long type from schema files. GraphQL working.